# churn-risk-ai-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  evals.yml
app/: __init__.py  main.py  pipeline.py  server.py
docs/: data_contract.md  prompt_design.md  risk_strategy.md  sample_output.md  system_card.md
docs/adr/: 0001-deterministic-risk-scoring.md  0002-llm-only-for-summarization.md  0003-graceful-degradation.md  0004-slack-as-delivery-channel.md  0005-subscription-status-modeling.md  0006-http-endpoint.md  0007-evaluating-llm-output.md  0008-llm-observability-platform.md  0009-serverless-aws-deployment.md
docs/diagrams/: system-flow.md
evals/: __init__.py  golden_set.jsonl  rubric.md  run.py
prompts/: eval_judge_prompt.txt  failed_generation_fallback.txt  risk_summary_prompt.txt  system_prompt.txt
prompts/testing/: edge_case_tests_prompt.md  fallback_tests_prompt.md  risk_scoring_tests_prompt.md  slack_formatter_tests_prompt.md  threshold_tests_prompt.md
sample_data/: sample_accounts.csv
src/: config.py  models.py
src/ai/: fallback_summary.py  llm_client.py  prompt_builder.py
src/ingestion/: csv_loader.py
src/messaging/: slack_client.py  slack_formatter.py
src/resilience/: error_handler.py  retry.py
src/risk/: risk_rules.py  risk_scoring.py
tests/: test_evals.py  test_fallback_summary.py  test_risk_scoring.py  test_server.py  test_slack_formatter.py  test_threshold.py
